--- a/bibliography.bib
+++ b/bibliography.bib
@@ -21,19 +21,81 @@
   url = {http://doi.acm.org/10.1145/2001269.2001293}
 }
 
-@INPROCEEDINGS{kosecka2004,
-  author = {Ko\v{s}eck\'{a}, Jana and Ma, Yi and Soatto, Stefano and Vidal, Ren{\'e}},
-  title = {Multiple-view geometry for image-based modeling},
-  booktitle = {ACM SIGGRAPH 2004 Course Notes},
-  year = {2004},
-  series = {SIGGRAPH '04},
-  address = {New York, NY, USA},
-  publisher = {ACM},
-  acmid = {1103909},
-  articleno = {9},
-  doi = {10.1145/1103900.1103909},
-  location = {Los Angeles, CA},
-  url = {http://doi.acm.org/10.1145/1103900.1103909}
+@Book{Hofmeister2011,
+	author       = "Marius Hofmeister",
+	title        = "Self-Localization, Mapping and Coverage with Resource-Limited Mobile Robots",
+	publisher    = "Logos Verlag Berlin GmbH",
+	address      = "Berlin",
+	year         = "2011",
+	isbn         = "978-3-8325-2887-4",
+}
+
+@Book{RusNor2012,
+	author       = "Stuart Russell; Peter Norvig ",
+	title        = "Kuenstliche Intelligenz",
+	publisher    = "Pearson Deutschland GmbH",
+	address      = "Hallbergmoos",
+	year         = "2012",
+	isbn         = "978-3-86894-098-5",
+}
+
+@Book{McKerrow1991,
+	author       = "Phillip John McKerrow ",
+	title        = "Introduction to Robotics",
+	publisher    = "Addison-Wesley Publishers Ltd.",
+	address      = "Sydney",
+	year         = "1991",
+	isbn         = "0-201-18240-8",
+}
+
+@Book{BaMi2010,
+	author       = "T. Bajd; M.Mihelj; J.Lenarcic; A.Stanovnik; M.Munih ",
+	title        = "Robotics",
+	publisher    = "Springer Science + Business Media B.V..",
+	address      = "Heidelberg",
+	year         = "2010",
+	isbn         = "978-90-481-3775-6",
+}
+
+@Book{Hering2012,
+	author       = "Ekbert Hering; Gert Schönfelder ",
+	title        = "Sensoren in Wissenschaft und Technik",
+	publisher    = "Vieweg+ Teubner Verlag ",
+	address      = "Wiesbaden",
+	year         = "2012",
+	isbn         = "978-3-8348-0169-2",
+}
+
+@Book{HeLiNue2012,
+author       = "Joachim Hertzberg; Kai Lingemann; Andreas Nüchter ",
+title        = "Mobile Roboter",
+publisher    = "Srpinger Vieweg  Verlag ",
+address      = "Berlin",
+year         = "2012",
+isbn         = "978-3-642-01725-4",
+}
+
+@Book{MeWi1999,
+author       = "Gerhard Merzinger; Thomas Wirth ",
+title        = "Repetitorium der Höheren Mathematik ",
+publisher    = "Binom Verlag ",
+address      = "Springe",
+year         = "1999",
+isbn         = "3-923 923-33-3",
+}
+
+
+@ARTICLE{Moore1965,
+	author = "Gordon.E.Moore",
+	title = "Cramming more components onto integrated circuits",
+	journal = "Electronics",
+	year = "1965",
+	volume = "38",
+	pages = "114-117",
+	number = "8",
+	month = "apr",
+	publisher = "IEE",
+	url = "https://www.cs.utexas.edu/~fussell/courses/cs352h/papers/moore.pdf"
 }
 
 @comment{jabref-meta: selector_publisher:}
